# bitcoin-frost-wallet

./: Cargo.toml  README.md  build.rs
schema/: chain.capnp  common.capnp  dkg.capnp  echo.capnp  frost.capnp  handler.capnp  init.capnp  mining.capnp  proxy.capnp  wallet.capnp
src/: capnp_gen.rs  chain_capnp.rs  common_capnp.rs  cpp_capnp.rs  dkg.rs  echo_capnp.rs  error.rs  frost.rs  handler_capnp.rs  init_capnp.rs  ipc.rs  lib.rs  main.rs  mining_capnp.rs  process.rs  proxy_capnp.rs  types.rs
src/capnp_schema/: mod.rs
src/chilldkg/: chilldkg.rs  coordinator.rs  dkg_process.rs  mod.rs  participant.rs  tests.rs
src/common/: constants.rs  errors.rs  mod.rs  types.rs
src/dkg/: chilldkg.rs  frost.rs  mod.rs
src/frost/: coordinator.rs  mod.rs  participant.rs  signing_process.rs  tests.rs
src/frost_dkg/: chilldkg.rs  dkg_process.rs  frost.rs  mod.rs  signing_process.rs
src/ipc/: capnp_gen.rs  communication.rs  mod.rs  process.rs
src/rpc/: rpc.rs
src/wallet/: address.rs  chain_sync.rs  core.rs  mod.rs  node_interface.rs  rpc.rs  storage.rs  transaction.rs  wallet.rs
tests/: types_tests.rs
