[package]
name = "bitcoin-frost-wallet"
version = "0.1.0"
edition = "2021"
description = "A Bitcoin wallet using FROST/ChillDKG with multi-process architecture"
build = "build.rs"

[dependencies]
# FROST implementation
frost-secp256k1 = "2.1.0"
frost-core = "2.1.0"
rand = "0.9.0"
rand_core = "0.9.3"

# Bitcoin dependencies
bitcoin = { version = "0.31", features = ["rand", "serde"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }

# Multi-processing & async
tokio = { version = "1.32", features = ["full", "process", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Cap'n Proto for IPC
capnp = "0.18"
capnp-rpc = "0.18"
capnpc = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling & logging
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.10"
indicatif = "0.17"

# Path and filesystem
dirs = "5.0"

[build-dependencies]
capnpc = "0.18"

[dev-dependencies]
tempfile = "3.17.1"
hex = "0.4"
test-case = "3.3"
tokio-test = "0.4.4"

[features]
default = ["std"]
std = ["secp256k1/std"]