[package]
name = "bitcoin-frost-wallet"
version = "0.1.0"
edition = "2021"
description = "A Bitcoin wallet using FROST/ChillDKG with multi-process architecture"
#build = "build.rs"

[dependencies]
# FROST implementation
frost-secp256k1 = "2.1.0"
frost-core = "2.1.0"
rand = "0.9.0"
rand_core = { version = "0.6.4"}

# Bitcoin dependencies
bitcoin = { version = "0.31", features = ["rand", "serde"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
bitcoincore-rpc = "0.19.0"

# Multi-processing & async
tokio = { version = "1.32", features = ["full", "process", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }

# Cap'n Proto for IPC
capnp = "0.20.4"
capnp-rpc = "0.20.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Error handling & logging
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.10"
indicatif = "0.17"

# Path and filesystem
dirs = "5.0"
async-trait = "0.1.87"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
base64 = "0.13.1"

[build-dependencies]
capnpc = "0.20.1"

[dev-dependencies]
tempfile = "3.17.1"
hex = "0.4"
test-case = "3.3"
tokio-test = "0.4.4"

[features]
default = ["std"]
std = ["secp256k1/std"]